# LicheePi-Nano_example

./: .gitmodules  README.md
framebuffer_demo/: CMakeLists.txt  main.c  readme.md
framebuffer_demo/picture/: wallpaper_8depth.bitbmp
helloworld/: CMakeLists.txt  main.c
lvgl/: CMakeLists.txt  build.sh
lvgl/lv_port_linux_frame_buffer/: lv_conf.h  main.c
mouse/: CMakeLists.txt  build.sh  main.c
